Dockerfile + Ansible + Jenkinsfile changes

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,14 +7,27 @@
        pip:
          name: docker
 
-     - name: Pull image from Docker Hub (replace with your repo)
-       community.docker.docker_image:
-         name: yourdockerhubuser/scientific-calculator:latest
-         source: pull
+     - name: Set image name
+       set_fact:
+        image_name: "{{ image_name | default('yourdockerhubuser/scientific-calculator:latest') }}"
+
+    - name: Pull image from Docker Hub (supports private registries)
+      community.docker.docker_image:
+        name: "{{ image_name }}"
+        source: pull
+        # Optional registry auth (passed via extra vars)
+        registry_username: "{{ registry_username | default(omit) }}"
+        registry_password: "{{ registry_password | default(omit) }}"
+
+     - name: Stop existing container if present
+       community.docker.docker_container:
+        name: scientific_calculator
+        state: absent
+       ignore_errors: true
 
      - name: Run container
        community.docker.docker_container:
-         name: scientific_calculator
-         image: yourdockerhubuser/scientific-calculator:latest
-         state: started
-         restart_policy: unless-stopped
+        name: scientific_calculator
+        image: "{{ image_name }}"
+        state: started
+        restart_policy: unless-stopped
