--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -29,9 +29,31 @@
         state: absent
       ignore_errors: true
 
-    - name: Run container
+    - name: Run container (configured for `docker attach`)
+      # Run the container so its main process is the interactive CLI. This
+      # starts the container detached but keeps a TTY and stdin open so you
+      # can later run `docker attach scientific_calculator` to interact with
+      # the CLI. To detach without stopping the container, use Ctrl-p Ctrl-q.
       community.docker.docker_container:
         name: scientific_calculator
         image: "{{ image_name }}"
         state: started
         restart_policy: unless-stopped
+        # Keep a TTY and stdin open so `docker attach` can connect to PID 1
+        tty: yes
+        stdin_open: yes
+        # Override command to run the CLI as PID 1 (ensure image supports it)
+        command: "python -u -m src.main"
+        # Optional: set environment to ensure unbuffered logs (image may already set this)
+        env:
+          PYTHONUNBUFFERED: '1'
+
+    - name: Wait for container to be running
+      community.docker.docker_container_info:
+        name: scientific_calculator
+      register: container_info
+
+    - name: Fail if container is not running
+      fail:
+        msg: "scientific_calculator container is not running or failed to start"
+      when: container_info is not defined or container_info.containers | length == 0
