--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -60,7 +60,7 @@
     - name: Fail if container is not running
       ansible.builtin.fail:
         msg: "scientific_calculator container is not running"
-      when: container_info is not defined or container_info.containers | length == 0
+      when: container_info is not defined or (container_info.get('containers', []) | length) == 0
 
     - name: Show how to attach to the container (info)
       ansible.builtin.debug:
